feat(playlist): add update visibiltiy for playlist and get all playlist according to requirements
